--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -31,13 +31,13 @@
       <div class="user-profile_box">
         <span class="nav_my_account_text" >My Account <i id="nav_my_accountArrow" class="fa-solid fa-angle-down"></i> </span> 
         <div class="user-profile_Container">
-          <div><a href="/shopcard/user-profile">   <i class="fa-solid fa-user"></i> <span>My Profile</span> </a></div>
-          <div> <a href="/shopcard/user-coupons"> <i class="fa-solid fa-ticket"></i>  <span>My Coupons</span> </a></div>
-          <div><a href="/shopcard/user-orders"> <i class="fa-solid fa-cart-flatbed-suitcase"></i> <span>Orders</span> </a></div>
-          <div><a href="/shopcard/user-gift-card"> <i class="fa-solid fa-gifts"></i> <span> Gift Card </span> </a></div>
-          <div><a href="/shopcard/user-shopcard-zone"> <i class="fa-solid fa-star-of-david"></i> <span>Shopcard Zone</span> </a></div>
+          <div><a href="/shopcard/user-profile?tab=profileInformation">   <i class="fa-solid fa-user"></i> <span>My Profile</span> </a></div>
+          <div> <a href="/shopcard/user-profile?tab=myCoupon"> <i class="fa-solid fa-ticket"></i>  <span>My Coupons</span> </a></div>
+          <div><a href="/shopcard/user-profile?tab=myorders"> <i class="fa-solid fa-cart-flatbed-suitcase"></i> <span> My Orders</span> </a></div>
+          <div><a href="/shopcard/user-profile?tab=giftCard"> <i class="fa-solid fa-gifts"></i> <span> Gift Card </span> </a></div>
+          <div><a href="/shopcard/shopcard-zone"> <i class="fa-solid fa-star-of-david"></i> <span>Shopcard Zone</span> </a></div>
           <div> <a href="/shopcard/authenticate/logout"> <i class="fa-solid fa-power-off"></i> <span>Logout</span> </a> </div>
-        </div>
+        </div> 
       </div>
       <div class="home-nav-watchList">
         <a href="/shopcard/watchlist">
