--- a/view/layouts/boilerPlateCode.ejs
+++ b/view/layouts/boilerPlateCode.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/css/privacy_policy.css">
     <link rel="stylesheet" href="/css/watchlist.css">
     <link rel="stylesheet" href="/css/Explore.css">
+    <link rel="stylesheet" href="/css/shopcard-zone.css">
     <!-- Google fonts and icons Link -->
     <!-- <link rel="stylesheet"
      
