--- a/view/listings/watchlist.ejs
+++ b/view/listings/watchlist.ejs
@@ -77,11 +77,6 @@
           </div>
       
           <div class="watchlist-address-change-select-main">
-            <!-- No Address Fetched Box -->
-
-           <!-- <div class="watchlist-no-address-main">
-            
-           </div> -->
 
            <div class="watchlist-all-address-option-box">
 
@@ -98,7 +93,7 @@
               </div>
             </label>          
       
-            <!-- Address 2 -->
+            <!-- Address 2 --> 
             <label class="watchlist-address-option">
               <input type="radio" name="selectedAddress" />
               <div class="watchlist-address-details">
@@ -110,28 +105,7 @@
                 <p class="full-address">Near Royal agency , dataganj chungi</p>
               </div>
             </label>
-            <label class="watchlist-address-option">
-              <input type="radio" name="selectedAddress" />
-              <div class="watchlist-address-details">
-                <div class="watchlist-address-top">
-                  <p class="watchlist-address-change-user-name">Jayveer Kumar</p>
-                  <span class="watchlist-address-tag office">Office</span>
-                </div>
-                <p class="pincode">Pincode: 243601</p>
-                <p class="full-address">Near Royal agency , dataganj chungi</p>
-              </div>
-            </label>
-            <label class="watchlist-address-option">
-              <input type="radio" name="selectedAddress" />
-              <div class="watchlist-address-details">
-                <div class="watchlist-address-top">
-                  <p class="watchlist-address-change-user-name">Jayveer Kumar</p>
-                  <span class="watchlist-address-tag office">Office</span>
-                </div>
-                <p class="pincode">Pincode: 243601</p>
-                <p class="full-address">Near Royal agency , dataganj chungi</p>
-              </div>
-            </label>
+
             </div>
 
           </div>
@@ -196,6 +170,12 @@
           </div>
         </a>
       <% } %>
+      <div class="watchlist-products-checkout-mainBox">
+        <button>
+          <span class="material-symbols-outlined">place_item</span>
+          <span>Place Order</span>
+        </button>
+      </div>
     </div>
   </section>
   <!-- Right Section for total price checkout  -->  
