Completed work on checkout page like now user can add new address if not exist or exist as well and user can not place order untill he cannot select any payment method or pay required amounnt , and user can pay by scanning QR Code

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,6 +16,7 @@
   /* Missing Essential Colors for E-commerce */
   --color-success: #22c55e;               /* Success messages, in stock */
   --color-warning: #f59e0b;               /* Warnings, low stock */
+   --color-warning-bg: #e39308b1;
   --color-error: #ef4444;                 /* Errors, out of stock */
   --color-info: #3b82f6;                  /* Information, notifications */
 
