--- a/view/layouts/boilerPlateCode.ejs
+++ b/view/layouts/boilerPlateCode.ejs
@@ -13,11 +13,13 @@
     <link rel="stylesheet" href="/css/review.css">
     <link rel="stylesheet" href="/css/login_register.css">
     <link rel="stylesheet" href="/css/user_profile.css">
-    <link rel="stylesheet" href="/css/buy.css">
+    <link rel="stylesheet" href="/css/checkout.css">
     <link rel="stylesheet" href="/css/privacy_policy.css">
     <link rel="stylesheet" href="/css/watchlist.css">
     <link rel="stylesheet" href="/css/Explore.css">
     <link rel="stylesheet" href="/css/shopcard-zone.css">
+    <!-- QR Code Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <!-- Google fonts and icons Link -->
     <!-- <link rel="stylesheet"
      
